# goit-pythonweb-hw-012

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
app/api/: auth.py  contacts.py  users.py  utils.py
app/conf/: config.py
app/constant_bag/: redis.py
app/core/: config.py
app/database/: db.py  redis.py
app/db/: session.py
app/entity/: base.py  bootstrap.py  contact.py  user.py
app/enum/: user_role.py
app/errors/: base.py  contact.py  token.py  user.py
app/exceptions/: contact_exists_exception.py  token_decode_exception.py  token_expired_exception.py  user_exists_exception.py
app/middlewares/: logger.py
app/models/: __init__.py  base.py  contact.py  user.py
app/repository/: contact.py  user.py
app/schemas/: auth.py  base.py  contact.py  mail.py  user.py
app/security/: password_hasher.py  passwords.py  token_encoder.py  tokens.py
app/security/constant_bag/: token_types.py
app/services/: auth.py  contact.py  mail.py  upload_file.py  user.py
docs/source/: conf.py  index.rst  models.rst  modules.rst
migrations/: env.py
migrations/versions/: 4c57b130615c_initial_migration.py
templates/: reset_password.html
templates/email/: reset_password.html  verify_email.html
tests/: conftest.py
tests/integration/: conftest.py  test_contacts.py  test_contacts_api.py
tests/integration/api/: test_auth.py  test_contacts.py  test_extra_cases.py
tests/unit/: test_contact_repository.py  test_user_repository.py
tests/unit/repository/: test_contact.py  (+1 more)
